# reweave

./: .gitignore  .vercelignore  AGENTS.md  Cargo.toml  README.md  package.json  todo.md  vercel.json
.cargo/: config.toml
api/: Cargo.toml
api/src/: api.rs  create.rs  health.rs  lib.rs  puzzle.rs
backend/: Cargo.toml
backend/api/: create.rs  find.rs
backend/api/check-puzzle/: [id].rs
backend/api/puzzle/: [id].rs
backend/src/: _main.rs  api.rs  board.rs  lib.rs  main.rs  puzzle.rs  words.rs
backend/src/data/: board.rs  puzzle.rs
backend/tests/: api.rs
common/: Cargo.toml
common/src/: puzzle.rs
frontend/: Cargo.toml  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vercel.json  vite.config.ts
frontend/src/: App.tsx  config.ts  index.css  lib.rs  wasm.ts
frontend/src/components/Board/: Board.module.css  Board.tsx  index.ts
frontend/src/components/Menu/: Menu.module.css  Menu.tsx
frontend/src/components/NavBar/: NavBar.module.css  NavBar.tsx
frontend/src/components/Popup/: Popup.module.css  Popup.tsx
frontend/src/components/WordList/: Word.tsx  WordList.module.css  WordList.tsx  index.ts  types.ts
frontend/src/components/Wrapper/: Wrapper.module.css  Wrapper.tsx
frontend/src/pages/create/: Create.module.css  Create.tsx
frontend/src/pages/home/: Home.module.css  Home.tsx
frontend/src/pages/play/: Play.module.css  Play.tsx
reweave/: Cargo.toml  api.rs  vercel.json
reweave/api/: create.rs  health.rs  puzzle.rs  puzzles.rs
reweave/api/puzzle/: [id].rs
reweave/src/: common.rs  db.rs  functions.rs  helper.rs  lib.rs
reweave/src/common/: board.rs  puzzle.rs
reweave/src/functions/: create.rs  puzzle.rs
solver/: Cargo.toml
solver/src/: main.rs
wordlist/: .gitignore  Cargo.toml  README.md  wordlist.txt
wordlist/src/: main.rs
