[workspace]
resolver = "3"
members = ["common", "frontend", "api"]
exclude = ["wordlist"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3

# [[bin]]
# name = "create"
# path = "api/create.rs"

# [[bin]]
# name = "puzzle_id"
# path = "api/puzzle/[id].rs"
