[package]
name = "reweave"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors"] }

[dev-dependencies]
http-body-util = "0.1.3"
tower = "0.5.3"
