[package]
name = "reweave"
version = "0.1.0"
edition = "2024"

[dependencies]
vercel_runtime = "2"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors"] }
serde_urlencoded = "0.7.1"
http = "1.4.0"

[dev-dependencies]
http-body-util = "0.1.3"
tower = "0.5.3"

[lib]
path = "src/lib.rs"

[[bin]]
name = "find"
path = "api/find.rs"

[[bin]]
name = "_id_"
path = "api/check-puzzle/[id].rs"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
