[package]
name = "backend"
version = "0.1.0"
edition = "2024"
description = "Backend package. Deals with getting from and creating a puzzle to the server."

[dependencies]
common = { path = "../common" }
serde = { workspace = true }
serde_json = { workspace = true }

vercel_runtime = "2"
tokio = { version = "1", features = ["macros", "fs", "io-util"] }
serde_urlencoded = "0.7.1"
sqlx = { version = "0.8.6", features= ["postgres", "runtime-tokio-rustls"] }

[lib]
path = "src/lib.rs"

[[bin]]
name = "create"
path = "api/create.rs"

[[bin]]
name = "puzzle_id"
path = "api/puzzle/[id].rs"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
