# Due to Vercel needing this backend to be fully independent, we can't have anything from the workspace

[package]
name = "reweave"
version = "0.1.0"
edition = "2024"
description = "Common + backend package. Data + Deals with getting from and creating a puzzle to the server."

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

serde_urlencoded = "0.7.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
vercel_runtime = "2"
tokio = { version = "1", features = ["fs", "io-util"] } # rt, macros
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls"] }

[lib]
path = "src/lib.rs"

# [[bin]]
# name = "api"
# path = "api.rs"

[[bin]]
name = "health"
path = "api/health.rs"

# [[bin]]
# name = "create"
# path = "api/create.rs"

# [[bin]]
# name = "puzzle"
# path = "api/puzzle/[id].rs"